@@ -8,6 +8,7 @@ import clarinetsim.message.*;
 import clarinetsim.reputation.Signature;
 import peersim.core.Node;
 
+import java.util.List;
 import java.util.Optional;
 
 public class CommunicationManager {
@@ -50,14 +51,17 @@ public class CommunicationManager {
                 return;
             }
             var fwd = new QueryForward(queryResponse, ctx.self(), Signature.VALID);
-            NeighborUtils.send(recipient.get(0), fwd, ctx);
+            NeighborUtils.send(recipient.getFirst(), fwd, ctx);
             log.add(fwd);
         });
     }
 
     public Connection receive(Connection connection, Data message, EventContext ctx) {
         log.add(ctx.self(), connection, message);
-        ctx.reputationManager().review(connection, message);
+        if(ctx.reputationManager().receiverReview(connection, message)) {
+            var messageForward = new DataForward(message, Signature.VALID);
+            NeighborUtils.send(connection.sender(), messageForward, ctx);
+        }
         return connection;
     }
 
@@ -104,6 +108,10 @@ public class CommunicationManager {
      */
     Log log() {
         return log;
+    }
+
+    public List<LogEntry> allMessages() {
+        return log.all();
     }
 
     public void printLog(Node node) {
